// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Chip with Icons 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  margin-bottom: 20px;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #f2f2f2;
  color: #0f0f17;
  border: 0.0625rem solid #737373;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  width: 1rem;
  cursor: auto;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.emotion-4>* {
  max-height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="chip"
          >
            <div
              className="emotion-4"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="chip"
          >
            <div>
              <div>
                Label
              </div>
            </div>
            <div
              className="emotion-4"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
            data-testid="chip"
          >
            <div
              className="emotion-4"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label
              </div>
            </div>
            <div
              className="emotion-4"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Dynamic Chip Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #f2f2f2;
  color: #0f0f17;
  border: 0.0625rem solid #737373;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="chip"
      >
        <div>
          <div>
            change me!
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
